--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
         be altogether replaced with bootstrap alerts, though!-->
         <h2>tic tac toe</h2>
         <div class="row">
-          <div class="col atop"><h4 id="message-gm"></h4></div>
-          <div class="col atop"><h4 id="message"></h4></div>
+          <div class="col atop">
+            <h4 id="message-gm"></h4>
+            <h5 id="message-gm-process"></h5>
+          </div>
+          <div class="col atop">
+            <h4 id="message"></h4>
+            <h5 id="message-proc"></h5>
+          </div>
         </div>
       </div>
       <div class="logged-out">the log-in/sign-up div! show me on log-out, hide me on log-in
@@ -61,19 +67,19 @@
       </div>
       <div class="game-started container-fluid" style="display: none"> <!--the gameboard div! show me on log-in, hide me on log-out!-->
         <div class="row">
-              <div class="col box" id="0">0</div>
-              <div class="col box" id="1">1</div>
-              <div class="col box" id="2">2</div>
+              <div class="col box gamespace" id="0"></div>
+              <div class="col box gamespace" id="1"></div>
+              <div class="col box gamespace" id="2"></div>
         </div>
         <div class="row">
-              <div class="col box" id="3">3</div>
-              <div class="col box" id="4">4</div>
-              <div class="col box" id="5">5</div>
+              <div class="col box gamespace" id="3"></div>
+              <div class="col box gamespace" id="4"></div>
+              <div class="col box gamespace" id="5"></div>
         </div>
         <div class="row">
-              <div class="col box" id="6">6</div>
-              <div class="col box" id="7">7</div>
-              <div class="col box" id="8">8</div>
+              <div class="col box gamespace" id="6"></div>
+              <div class="col box gamespace" id="7"></div>
+              <div class="col box gamespace" id="8"></div>
         </div>
       </div>
     </body>
