--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h2>tic tac toe</h2>
         <div class="row">
           <div class="col atop">
-            <h4 id="message-gm"></h4>
-            <h5 id="message-gm-process"></h5>
+            <h4 id="message-top-left"></h4>
+            <h5 id="message-bottom-left"></h5>
           </div>
           <div class="col atop">
-            <h4 id="message"></h4>
-            <h5 id="message-proc"></h5>
+            <h4 id="message-top-right"></h4>
+            <h5 id="message-bottom-right"></h5>
           </div>
         </div>
       </div>
