Fix win conditions check and click handler toggle Disable click handler on game over Fixed win conditions check Adjusted click handler on and off locations (added named function rather than initializing with the rest of the event handlers) Added win/loss/tie messaging TODO: stats retrieval! TODO: fix game status false on current stats retrieval test

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <div class="messages container-fluid nogutters"><!--the messages div! always around! may be around somewhere else on screen or
-        be altogether replaced with bootstrap alerts, though!-->
+      <div class="messages container-fluid nogutters">
         <h2>tic tac toe</h2>
         <div class="row">
           <div class="col atop">
@@ -26,7 +25,7 @@
           </div>
         </div>
       </div>
-      <div class="logged-out container-fluid">the log-in/sign-up div! show me on log-out, hide me on log-in
+      <div class="logged-out container-fluid">
         <h5>sign in or register a new account</h5>
         <div class="row">
           <hr>
@@ -45,8 +44,8 @@
           <hr>
           </div>
       </div>
-      <div class="logged-in container-fluid" style="display: none">the new game, get stats, change password, and sign out div! show me on log-in,
-      hide me on log-out!<div class="row">
+      <div class="logged-in container-fluid" style="display: none">
+      <div class="row">
         <hr>
         <form id="new-game">
         <button>start new game</button>
