Add simple stats retrieval, fixed game over status Added simple stats retrieval for games played Fixed game over status not being properly sent to api

--- a/index.html
+++ b/index.html
@@ -83,5 +83,6 @@
               <div class="col box gamespace rounded" id="8"></div>
         </div>
       </div>
+      <div id="testing-stats">div to test stats retrieval</div>
     </body>
 </html>
