--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <div class="messages container-fluid nogutters">
+      <div class="messages container-fluid">
         <h2>tic tac toe</h2>
         <div class="row">
           <div class="col atop">
@@ -66,7 +66,7 @@
         </form>
       </div>
       </div>
-      <div class="game-started container-fluid" style="display: none"> <!--the gameboard div! show me on log-in, hide me on log-out!-->
+      <div class="game-started container-fluid w-50" style="display: none"> <!--the gameboard div! show me on log-in, hide me on log-out!-->
         <div class="row">
               <div class="col box gamespace rounded" id="0"></div>
               <div class="col box gamespace rounded" id="1"></div>
@@ -83,6 +83,5 @@
               <div class="col box gamespace rounded" id="8"></div>
         </div>
       </div>
-      <div id="testing-stats">div to test stats retrieval</div>
     </body>
 </html>
