Minor cosmetic changes Added a minor css change to logged out div

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <div class="logged-out container-fluid rounded">
+      <div class="logged-out container-fluid rounded w-50">
         <h5>sign in or register a new account</h5>
         <div class="row">
           <hr>
